--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div id="calculator">
+            <div id="displayContainer">
+                <div class="screen"></div>
+            </div>
+            <div id="buttonContainer">
+                <button class="button cancel">C</button>
+                <button class="button backspace">&lt;-</button>
+                <button class="button divide">÷</button>
+                <button class="button 7">7</button>
+                <button class="button 8">8</button>
+                <button class="button 9">9</button>
+                <button class="button multiply">x</button>
+                <button class="button 4">4</button>
+                <button class="button 5">5</button>
+                <button class="button 6">6</button>
+                <button class="button minus">-</button>
+                <button class="button 1">1</button>
+                <button class="button 2">2</button>
+                <button class="button 3">3</button>
+                <button class="button plus">+</button>
+                <button class="button 0">0</button>
+                <button class="button decimal">.</button>
+                <button class="button equals">=</button>
+            </div>
+            
+        </div>
     </body>
 </html>
