--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="buttonContainer">
                 <button class="button cancel">C</button>
                 <button class="button backspace">&lt;-</button>
-                <button class="button divide">÷</button>
+                <button class="button divclasse">÷</button>
                 <button class="button 7">7</button>
                 <button class="button 8">8</button>
                 <button class="button 9">9</button>
@@ -31,7 +31,6 @@
                 <button class="button decimal">.</button>
                 <button class="button equals">=</button>
             </div>
-            
         </div>
     </body>
 </html>
