--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="button 5">5</button>
                 <button class="button 6">6</button>
                 <button class="button minus">-</button>
-                <button class="button 1">1</button>
+                <button class="button 1" id="btn1">1</button>
                 <button class="button 2">2</button>
                 <button class="button 3">3</button>
                 <button class="button plus">+</button>
