--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <button class="button cancel">C</button>
                 <button class="button backspace">&lt;-</button>
                 <button class="button divclasse">÷</button>
-                <button class="button 7">7</button>
-                <button class="button 8">8</button>
-                <button class="button 9">9</button>
+                <button class="button 7" id="btn7">7</button>
+                <button class="button 8" id="btn8">8</button>
+                <button class="button 9" id="btn9">9</button>
                 <button class="button multiply">x</button>
-                <button class="button 4">4</button>
-                <button class="button 5">5</button>
-                <button class="button 6">6</button>
+                <button class="button 4" id="btn4">4</button>
+                <button class="button 5" id="btn5">5</button>
+                <button class="button 6" id="btn6">6</button>
                 <button class="button minus">-</button>
                 <button class="button 1" id="btn1">1</button>
-                <button class="button 2">2</button>
-                <button class="button 3">3</button>
+                <button class="button 2" id="btn2">2</button>
+                <button class="button 3" id="btn3">3</button>
                 <button class="button plus">+</button>
-                <button class="button 0">0</button>
+                <button class="button 0" id="btn0">0</button>
                 <button class="button decimal">.</button>
                 <button class="button equals">=</button>
             </div>
