--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="button 1" id="btn1">1</button>
                 <button class="button 2" id="btn2">2</button>
                 <button class="button 3" id="btn3">3</button>
-                <button class="button plus">+</button>
+                <button class="button plus" id="btn+">+</button>
                 <button class="button 0" id="btn0">0</button>
                 <button class="button decimal">.</button>
                 <button class="button equals">=</button>
