--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="button 4" id="btn4">4</button>
                 <button class="button 5" id="btn5">5</button>
                 <button class="button 6" id="btn6">6</button>
-                <button class="button minus">-</button>
+                <button class="button minus" id="btn-">-</button>
                 <button class="button 1" id="btn1">1</button>
                 <button class="button 2" id="btn2">2</button>
                 <button class="button 3" id="btn3">3</button>
