--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div id="buttonContainer">
                 <button class="button cancel">C</button>
                 <button class="button backspace">&lt;-</button>
-                <button class="button divclasse">÷</button>
+                <button class="button divide" id="btn/">÷</button>
                 <button class="button 7" id="btn7">7</button>
                 <button class="button 8" id="btn8">8</button>
                 <button class="button 9" id="btn9">9</button>
-                <button class="button multiply">x</button>
+                <button class="button multiply" id="btn*">x</button>
                 <button class="button 4" id="btn4">4</button>
                 <button class="button 5" id="btn5">5</button>
                 <button class="button 6" id="btn6">6</button>
