--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div id="screen"></div>
             </div>
             <div id="buttonContainer">
-                <button class="button cancel">C</button>
+                <button class="button clear" id="btnAC">AC</button>
                 <button class="button backspace">&lt;-</button>
                 <button class="button divide" id="btn/">÷</button>
                 <button class="button 7" id="btn7">7</button>
