Add backspace, fix divide by zero issue
Added backspace function, fairly simple just pops the last result of the
displayValue array and updates it.

Message wasn't displaying if divide by zero, changed operate function
so that it performs a check before it returns the divide result, if the
result is a string it won't try to round it up etc.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <div id="buttonContainer">
                 <button class="button clear" id="btnAC">AC</button>
-                <button class="button backspace">&lt;-</button>
+                <button class="button backspace" id="btnBack">&lt;-</button>
                 <button class="button divide" id="btn/">÷</button>
                 <button class="button 7" id="btn7">7</button>
                 <button class="button 8" id="btn8">8</button>
