Add decimal button function
Added functionality to the decimal button. Was having an issue with it
not updating because of a mistake I made with the ID. Changed the ID in
index.html, modified other buttons so that it resets the new
decimalPressed variable.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="button 3" id="btn3">3</button>
                 <button class="button plus" id="btn+">+</button>
                 <button class="button 0" id="btn0">0</button>
-                <button class="button decimal">.</button>
+                <button class="button decimal" id="btnDec">.</button>
                 <button class="button equals" id="btn=">=</button>
             </div>
         </div>
